...
val RowScrollPosition = SemanticsPropertyKey<Pair<Int, Int>>("RowScrollPosition")

/** [RowScrollPosition] への代入用レシーバ。 */
var SemanticsPropertyReceiver.rowScrollPosition by RowScrollPosition

object TestTags {
    const val MAIN_ROOT = "main_root"
    const val MAIN_SCROLL_CONTAINER = "main_scroll_container"
    const val DRAWER_ROOT = "drawer_root"
    const val PERMANENT_ROOT = "permanent_root"
    const val SIDEBAR_EXPAND_BUTTON = "sidebar_expand_button"
    const val SIDEBAR_COLLAPSE_BUTTON = "sidebar_collapse_button"
    const val SUMMARY_CARD = "main_summary_card"
    const val SUMMARY_STATUS_TEXT = "main_summary_status_text"
    const val HISTORICAL_SUMMARY_CARD = "main_historical_summary_card"
    const val OBSERVATION_CARD = "main_observation_card"
    const val OBSERVATION_EXPAND_BUTTON = "main_observation_expand_button"
    const val LATEST_CARD = "main_latest_card"
...
